Conteúdo do artigo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,11 @@ a {
 figure {
     text-align: center;
 }
+figure.logo {
+    text-align: start;
+}
 header {
     background-color: #fff;
     border-bottom: solid 1px #cdcdcd;
+    border-top: solid 1px #cdcdcd;
 }
